[project]
name = "cfm-insar"
version = "1.0.0"
description = "Conditional Flow Matching for InSAR"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "awscli==1.43.2",
    "s3cmd==2.4.0",
    "submitit==1.5.3",
    "torch==2.8.0",
    "torchdata==0.11.0",
    "torchdiffeq==0.2.5",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "webdataset==1.0.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
    ]
torchvision = [
    { index = "pytorch-cu126"},
    ]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126" # PyTorch package index url for Cuda 12.6
explicit = true